# stw

./: .gitignore  README.md  pyproject.toml
stw/: __init__.py  before.txt  downloader.py  elements.py  engines.py  hooks.py  processors.py  scraper.py  site-configs.py  site_configs.py
stw/downloader/: __init__.py  common.py  http.py
stw/extractor/: common.py
stw/utils/: _utils.py
